--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       </div>
     </div>
     <div id="app"></div>
-    <div id="container">
+    <!-- <div id="container">
       <div id="blurb"><img src="./assets/blurb.jpg"></div>
       <div id="app2"></div>
       <div id="info"><img src="./assets/info.jpg"></div>
-    </div>
+    </div> -->
     <div id="app3"></div>
-    <!-- <script src="https://hrr42-fec5.s3-us-west-1.amazonaws.com/scripts/app1.js"></script> -->
+    <script src="http://18.220.59.235/bundle.js"></script>
     <!-- <script src="https://hrr42-fec5.s3-us-west-1.amazonaws.com/scripts/app2.js"></script> -->
     <!-- <script src="https://hrr42-fec5.s3-us-west-1.amazonaws.com/scripts/app3.js"></script> -->
   </body>
